chrome 69 scroll snap

--- a/preview2.html
+++ b/preview2.html
@@ -88,6 +88,7 @@ img, svg {
 /* pages/slides */
 body {
   counter-reset: slide;
+  scroll-snap-type: y proximity;
   scroll-snap-type: proximity;
 }
 
@@ -105,6 +106,9 @@ article {
   border: 1px solid var(--col-text);
   box-shadow: 0 3px 6px rgba(0,0,0,0.5);
   z-index: 0;
+  scroll-margin-top: 4vh;
+  scroll-snap-align: start;
+  scroll-snap-stop: always;
   scroll-snap-coordinate: 0% -4vh;
 }
 
